--- a/assets/css/aztheme.css
+++ b/assets/css/aztheme.css
@@ -1,2 +1,146 @@
+:root {
+  --c-primary: #f05928;
+  --c-primary-light: #d6400f;
+  --c-primary-dark: #f37e58;
+  --c-grey: #e1e6ec;
+  --c-grey-text: #777;
+  --c-dark: #333;
+}
 
+/**
+ * Start our global rules
+*/
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+}
+
+.site-header .upperbar a {
+  display: block;
+}
+
+.site-header .site-navbar .navbar .nav-item:not(.dropdown) .nav-link::after, .site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item:hover, .site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item:focus {
+  background-color: var(--c-primary, #f05928);
+}
+
+.site-header .site-navbar .navbar .navbar-brand:hover, .site-header .site-navbar .navbar .navbar-brand:focus, .site-header .site-navbar .navbar .nav-item .nav-link:hover, .site-header .site-navbar .navbar .nav-item .nav-link:focus, .site-header .site-navbar .navbar .nav-item .nav-link.active {
+  color: var(--c-primary, #f05928);
+}
+
+.site-header .upperbar a:hover, .site-header .upperbar a:focus {
+  color: var(--c-primary-dark, #f37e58);
+}
+
+.site-header .upperbar a, .site-header .site-navbar .navbar .navbar-brand, .site-header .site-navbar .navbar .nav-item .nav-link, .site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item {
+  color: var(--c-grey-text, #777);
+}
+
+.site-header .page-header .wrapper .page-header-title {
+  color: var(--c-dark, #333);
+}
+
+/**
+ * Start our header
+*/
+.site-header .upperbar {
+  background-color: #1d2327;
+}
+.site-header .upperbar .pages-menu {
+  justify-content: center;
+  flex-wrap: wrap;
+}
+@media (min-width: 768px) {
+  .site-header .upperbar .pages-menu {
+    justify-content: flex-start;
+  }
+}
+.site-header .upperbar .social-media-menu {
+  justify-content: center;
+}
+@media (min-width: 768px) {
+  .site-header .upperbar .social-media-menu {
+    justify-content: flex-end;
+  }
+}
+.site-header .upperbar a {
+  font-size: 0.875rem;
+  padding: 0.5rem 0.3125rem;
+  transition: color 380ms ease-in-out;
+}
+.site-header .site-navbar {
+  background-color: #fff;
+  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+.site-header .site-navbar .navbar .navbar-brand {
+  font-weight: 700;
+  transition: color 380ms ease-in-out;
+}
+.site-header .site-navbar .navbar .nav-item .nav-link {
+  position: relative;
+  font-weight: 700;
+  font-size: 0.875rem;
+  transition: color 380ms ease-in-out;
+}
+.site-header .site-navbar .navbar .nav-item:not(.dropdown) .nav-link::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: all 380ms ease-in-out;
+}
+.site-header .site-navbar .navbar .nav-item:not(.dropdown) .nav-link:hover::after, .site-header .site-navbar .navbar .nav-item:not(.dropdown) .nav-link:focus::after {
+  opacity: 1;
+  bottom: 0;
+}
+.site-header .site-navbar .navbar .nav-item:not(.dropdown) .nav-link.active::after {
+  opacity: 1;
+  bottom: 0;
+}
+.site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu {
+  padding: 0;
+  border: none;
+  border-radius: 0;
+  margin: 0;
+  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+.site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu[data-bs-popper] {
+  top: 122%;
+}
+.site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item {
+  font-weight: 700;
+  transition: all 380ms ease-in-out;
+}
+.site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item:hover, .site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item:focus {
+  color: #fff;
+  padding-left: 20px;
+}
+.site-header .page-header {
+  background-color: var(--c-grey, #e1e6ec);
+  padding: 40px 0;
+}
+.site-header .page-header .wrapper {
+  width: 60%;
+}
+.site-header .page-header .wrapper .page-header-title {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-transform: capitalize;
+  margin-bottom: 0.5rem;
+  letter-spacing: -1px;
+}
+.site-header .page-header .wrapper .page-heder-description {
+  font-size: 1.125rem;
+  margin-bottom: 0;
+}
 /*# sourceMappingURL=aztheme.css.map */
