--- a/assets/css/aztheme.css
+++ b/assets/css/aztheme.css
@@ -3,7 +3,7 @@
   --c-primary-light: #d6400f;
   --c-primary-dark: #f37e58;
   --c-grey: #e1e6ec;
-  --c-grey-text: #777;
+  --c-grey-text: #adadad;
   --c-dark: #333;
 }
 
@@ -14,6 +14,12 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 400;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 a {
@@ -36,11 +42,11 @@ a {
   color: var(--c-primary-dark, #f37e58);
 }
 
-.site-header .upperbar a, .site-header .site-navbar .navbar .navbar-brand, .site-header .site-navbar .navbar .nav-item .nav-link, .site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item {
-  color: var(--c-grey-text, #777);
+.site-header .upperbar a {
+  color: var(--c-grey-text, #adadad);
 }
 
-.site-header .page-header .wrapper .page-header-title {
+.site-header .site-navbar .navbar .navbar-brand, .site-header .site-navbar .navbar .nav-item .nav-link, .site-header .site-navbar .navbar .nav-item.dropdown .dropdown-menu .dropdown-item, .site-header .page-header .wrapper .page-header-title {
   color: var(--c-dark, #333);
 }
 
