--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -3,6 +3,6 @@ $c_primary_light: #d6400f;
 $c_primary_dark:  #f37e58;
 
 $c_grey:          #e1e6ec;
-$c_grey_text:     #777;
+$c_grey_text:     #adadad;
 
 $c_dark:          #333;
