--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,6 +1,6 @@
 $c_primary:       #f05928;
-$c_primary_light: #d6400f;
-$c_primary_dark:  #f37e58;
+$c_primary_light: #f37e58;
+$c_primary_dark:  #d6400f;
 
 $c_grey:          #e1e6ec;
 $c_grey_text:     #adadad;
