--- a/src/scss/utilities/_index.scss
+++ b/src/scss/utilities/_index.scss
@@ -1,3 +1,4 @@
 @forward '../utilities/global';
 @forward '../utilities/background';
 @forward '../utilities/color';
+@forward '../utilities/border';
