--- a/src/scss/utilities/_background.scss
+++ b/src/scss/utilities/_background.scss
@@ -3,3 +3,7 @@
 %bg-primary {
   background-color: var( --c-primary, $c_primary );
 }
+
+%bg-primary-dark {
+  background-color: var( --c-primary-dark, $c_primary_dark );
+}
